<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint"
                android:textSize="20sp"
                android:textAppearance="?android:textAppearanceLarge"/>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_1"
                style="@style/QuestionStyle" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_1_quiz_1_radio"
                    android:text="@string/option_1_quiz_1"
                    android:textAllCaps="true"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_2_quiz_1_radio"
                    android:text="@string/option_2_quiz_1"
                    android:textAllCaps="true"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_3_quiz_1_radio"
                    android:text="@string/option_3_quiz_1"
                    android:textAllCaps="true"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_4_quiz_1_radio"
                    android:text="@string/option_4_quiz_1"
                    android:textAllCaps="true"
                    style="@style/OptionStyle" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_2"
                style="@style/QuestionStyle" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_1_quiz_2_radio"
                    android:text="@string/option_1_quiz_2"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_2_quiz_2_radio"
                    android:text="@string/option_2_quiz_2"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_3_quiz_2_radio"
                    android:text="@string/option_3_quiz_2"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_4_quiz_2_radio"
                    android:text="@string/option_4_quiz_2"
                    style="@style/OptionStyle" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_3"
                style="@style/QuestionStyle" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_1_quiz_3_radio"
                    android:text="@string/option_1_quiz_3"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_2_quiz_3_radio"
                    android:text="@string/option_2_quiz_3"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_3_quiz_3_radio"
                    android:text="@string/option_3_quiz_3"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_4_quiz_3_radio"
                    android:text="@string/option_4_quiz_3"
                    style="@style/OptionStyle" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_4"
                style="@style/QuestionStyle" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_1_quiz_4_radio"
                    android:text="@string/option_1_quiz_4"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_2_quiz_4_radio"
                    android:text="@string/option_2_quiz_4"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_3_quiz_4_radio"
                    android:text="@string/option_3_quiz_4"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_4_quiz_4_radio"
                    android:text="@string/option_4_quiz_4"
                    style="@style/OptionStyle" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_5"
                style="@style/QuestionStyle" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_1_quiz_5_radio"
                    android:text="@string/option_1_quiz_5"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_2_quiz_5_radio"
                    android:text="@string/option_2_quiz_5"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_3_quiz_5_radio"
                    android:text="@string/option_3_quiz_5"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_4_quiz_5_radio"
                    android:text="@string/option_4_quiz_5"
                    style="@style/OptionStyle" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_6"
                style="@style/QuestionStyle" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_1_quiz_6_radio"
                    android:text="@string/option_1_quiz_6"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_2_quiz_6_radio"
                    android:text="@string/option_2_quiz_6"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_3_quiz_6_radio"
                    android:text="@string/option_3_quiz_6"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_4_quiz_6_radio"
                    android:text="@string/option_4_quiz_6"
                    style="@style/OptionStyle" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_7"
                style="@style/QuestionStyle" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_1_quiz_7_radio"
                    android:text="@string/option_1_quiz_7"
                    android:textAllCaps="true"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_2_quiz_7_radio"
                    android:text="@string/option_2_quiz_7"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_3_quiz_7_radio"
                    android:text="@string/option_3_quiz_7"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_4_quiz_7_radio"
                    android:text="@string/option_4_quiz_7"
                    android:textAllCaps="true"
                    style="@style/OptionStyle" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_8"
                style="@style/QuestionStyle" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/option_1_quiz_8_radio"
                    android:text="@string/option_1_quiz_8"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_2_quiz_8_radio"
                    android:text="@string/option_2_quiz_8"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_3_quiz_8_radio"
                    android:text="@string/option_3_quiz_8"
                    style="@style/OptionStyle" />

                <RadioButton
                    android:id="@+id/option_4_quiz_8_radio"
                    android:text="@string/option_4_quiz_8"
                    style="@style/OptionStyle" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_9"
                style="@style/QuestionStyle" />

            <CheckBox
                android:id="@+id/option_1_quiz_9"
                android:text="@string/option_1_quiz_9"
                style="@style/OptionStyle" />

            <CheckBox
                android:id="@+id/option_2_quiz_9"
                android:text="@string/option_2_quiz_9"
                style="@style/OptionStyle" />

            <CheckBox
                android:id="@+id/option_3_quiz_9"
                android:text="@string/option_3_quiz_9"
                style="@style/OptionStyle" />

            <CheckBox
                android:id="@+id/option_4_quiz_9"
                android:text="@string/option_4_quiz_9"
                style="@style/OptionStyle" />


        </LinearLayout>

        <LinearLayout
            style="@style/LayoutStyle">

            <TextView
                android:text="@string/quiz_no_10"
                style="@style/QuestionStyle" />

            <EditText
                android:id="@+id/option_quiz_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/option_quiz_10"
                android:inputType="text" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_centerHorizontal="true"
                android:onClick="submitAnswer" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
